Minor changes to text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
                         </header>
                         <p>The <b>openCOBRA project</b> has arisen to provide researchers with <b>easy access</b> to core COBRA methodologies, and to provide a repository for community contributed modules that build off of these core COBRA features. The <b>openCOBRA project</b> was initiated with tools for <b>MATLAB</b> but has now grown to include <b>Python</b> and <b>Julia</b>-based modules for dealing with the complex relationships of the next generation of COBRA models.</p>
 <br>
-                        <p>The openCOBRA project is currently lead by <a href="http://lewislab.ucsd.edu/lab/n/"><b>Nathan Lewis</b></a> from UCSD, <a href="http://wwwen.uni.lu/lcsb/research/systems_biochemistry/"><b>Ronan Fleming</b></a> from the University of Luxembourg, and <a href="http://www.dtu.dk/english/service/phonebook/person?id=87972&tab=2&qt=dtupublicationqueryy"><b>Nikolaus Sonnenschein</b></a> from the Technical University of Denmark.</p>
+                        <p>The openCOBRA project is currently lead by <a href="http://wwwen.uni.lu/lcsb/research/systems_biochemistry/"><b>Ronan Fleming</b></a> from the University of Luxembourg, <a href="http://www.dtu.dk/english/service/phonebook/person?id=87972&tab=2&qt=dtupublicationqueryy"><b>Nikolaus Sonnenschein</b></a> from the Technical University of Denmark, and <a href="http://lewislab.ucsd.edu"><b>Nathan Lewis</b></a> from UCSD.</p>
                     </div>
                     <span class="image"><img src="images/history.png" alt="" /></span>
                 </div>
